[feat] capturing a broken state for the app, tried scalajs react but not getting anywhere for a day, trying laminar now

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <!-- Include Scala.js compiled code -->
-    <script type="text/javascript" src="./target/scala-3.0.2/scala-js-blog-fastopt/main.js"></script>
+    <script type="text/javascript" data-main="./target/scala-2.13/scala-js-blog-fastopt/main.js"
+        src="./target/scala-2.13/scala-js-blog-fastopt/require.js"></script>
 </body>
 
 </html>
